--- a/latex/main.tex
+++ b/latex/main.tex
@@ -355,7 +355,7 @@ I denne sektion vil vi beskrive, hvordan tunnel-, spiral- og pegeopgaverne er de
 \end{minipage}\\\\
 I denne opgave skal testdeltageren føre sin markør igennem fire tunneller af varierende længde, og varierende bredde på startlinjen. De fire tunneller kan ses på Figur \ref{fig:ex_tunnel_1}, \ref{fig:ex_tunnel_2}, \ref{fig:ex_tunnel_3} og \ref{fig:ex_tunnel_4}, hvor de er skaleret ned til 50\% af deres oprindelige forhold, så deres indbyrdes relative størrelse er bevaret.  Størrelserne målt i pixels for tunnellængde, $A$, og den venstre lodrette linje, startlinjen $W_1$, er vist i tabel \ref{tab:tunnelopgave}. Den højre lodrette linje, slutstregen $W_2$, er fastsat til 8 pixels bredde, hvilket stemmer overens med forsøget lavet i \cite{accot1997}
 \begin{center}
-	\begin{tabular}{c c c}
+	\begin{tabular}{c c c c}
 		Tunnel & A & W_1 & W_2 \\
 		\hline
 		1 & 100 & 20 & 8 \\
