--- a/latex/main.tex
+++ b/latex/main.tex
@@ -757,7 +757,7 @@ Accot og Zhai beskriver i deres artikel \cite{accot1997}, hvordan en indsnævren
 \begin{align*}
 ID_{NT} = \frac{A}{W_2-W_1}\ln\left(\frac{W_2}{W_1}\right)
 \end{align*}
-$W_1$ er størrelsen på startstregen, og $W_2$ er størrelsen på slutstregen, imens $A$ er længden af tunnelen. I følge Accot og Zhai er der en lineær sammenhæng imellem tiden $T$ og dette $ID_{NT}$, hvilket giver anledning til følgende formulering $T = a+b\cdot ID_{NT}$. Tilpasses denne formulering med lineær regression til vores 264 testdeltageres tunnelopgaver findes nedenstående matematiske model.
+$W_1$ er størrelsen på startstregen, og $W_2$ er størrelsen på slutstregen, imens $A$ er længden af tunnelen. I følge Accot og Zhai er der en affin sammenhæng imellem tiden $T$ og dette $ID_{NT}$, hvilket giver anledning til følgende formulering $T = a+b\cdot ID_{NT}$. Tilpasses denne formulering med lineær regression til vores 264 testdeltageres tunnelopgaver findes nedenstående matematiske model.
 
 \begin{align*}
 \text{Accot \& Zhai: } T = 6112.40+47.77 \cdot \left(\frac{A}{W_2-W_1}\cdot\ln\left(\frac{W_2}{W_1 }\right)\right)
