--- a/latex/main.tex
+++ b/latex/main.tex
@@ -765,7 +765,7 @@ $W_1$ er størrelsen på startstregen, og $W_2$ er størrelsen på slutstregen, 
 
 Det kan bemærkes, at den primære forskel imellem Accot og Zhai's formulering og de fire andre er det multiplikative led, $b$. Da $ID_{NT}$ antager væsentligt højere værdier end de fire andre $ID$'er, så er $b$ også tilsvarende mindre. For at visualisere de fem formuleringers tilpasning til dataene har vi beregnet gennemsnitstiden for alle testdeltagerne per $ID$. Dette giver anledning til fire datapunkter, ét for hver tunnelopgave, som kan ses i figur \ref{fig:welford_tunnel_line}, \ref{fig:fitt_tunnel_line}, \ref{fig:meyer_tunnel_line}, \ref{fig:mackenzie_tunnel_line} og \ref{fig:accot_tunnel_line} sammen med de tilpassede affine kurver. På $x$-aksen er modellernes respektive $ID$ imens tiden, $T$ er angivet ved $y$-aksen. 
 
-Af graferne ser det ud til, at Welfords formulering klarer sig markant dårligere i at beskrive vores data end de fire andre formuleringer. For at undersøge dette har vi lavet AIC analyse af formuleringerne tilpasset det fulde datasæt, \ref{tab:table_analysis_aic_tunnel_all}, og gennemsnits datapunkterne, \ref{tab:table_analysis_aic_tunnel_mean}. Begge tabeller viser en klar tendens i og med, at Meyers formulering klarer sig bedst imens Welfords klarer sig dårligst i at beskrive vores data. Begge tabeller viser den samme rækkefølge for formuleringernes indbyrdes placering, men de relative forskelle varierer.\\\\
+Af graferne ser det ud til, at Welford's formulering er markant dårligere til at beskrive vores data end de fire andre formuleringer. For at undersøge dette har vi lavet AIC analyse af formuleringerne tilpasset det fulde datasæt, \ref{tab:table_analysis_aic_tunnel_all}, og gennemsnits datapunkterne, \ref{tab:table_analysis_aic_tunnel_mean}. Begge tabeller viser en klar tendens i og med, at Meyers formulering klarer sig bedst imens Welfords klarer sig dårligst i at beskrive vores data. Begge tabeller viser den samme rækkefølge for formuleringernes indbyrdes placering, men de relative forskelle varierer.\\\\
 \begin{minipage}[t]{\linewidth} 
 	\begin{minipage}[t]{0.45\linewidth}
 			\begin{tabular}{lll}
