--- a/latex/main.tex
+++ b/latex/main.tex
@@ -776,7 +776,7 @@ Af graferne ser det ud til, at Welford's formulering er markant dårligere til a
 				Fitts & 20549.68 & 0.07\\
 				Welford & 20558.46 & 8.84
 			\end{tabular}
-			\captionof{table}{AIC værdier for de 264 testdeltageres tunnelopgaver. Deres indbyrdes forskel er beregnet med udgangspunkt i Meyer's formulering som nulpunkt}
+			\captionof{table}{AIC-værdier for de 264 testdeltageres tunnelopgaver. Deres indbyrdes forskel er beregnet med udgangspunkt i Meyer's formulering som nulpunkt}
 			\label{tab:table_analysis_aic_tunnel_all}
 	\end{minipage}
 	\begin{minipage}[t]{0.1\linewidth}
@@ -791,7 +791,7 @@ Af graferne ser det ud til, at Welford's formulering er markant dårligere til a
 				Fitts & 46.87 & 13.19\\
 				Welford & 64.97 & 31.29
 			\end{tabular}
-			\captionof{table}{AIC værdier for gennemsnittet af tiderne for de 264 testdeltageres tunnelopgaver ved hvert $ID$. Deres indbyrdes forskel er beregnet med udgangspunkt i Meyer's formulering som nulpunkt}
+			\captionof{table}{AIC-værdier for gennemsnittet af tiderne for de 264 testdeltageres tunnelopgaver ved hvert $ID$. Deres indbyrdes forskel er beregnet med udgangspunkt i Meyer's formulering som nulpunkt}
 			\label{tab:table_analysis_aic_tunnel_mean}
 	\end{minipage}
 \end{minipage}\\\\
