--- a/latex/main.tex
+++ b/latex/main.tex
@@ -795,7 +795,7 @@ Af graferne ser det ud til, at Welford's formulering er markant dårligere til a
 			\label{tab:table_analysis_aic_tunnel_mean}
 	\end{minipage}
 \end{minipage}\\\\
-Selvom Accot og Zhai's formulering er specificeret til denne type opgaver, er det ikke den, som beskriver vores data bedst. Dette kan være på grund af det relativt lave antal af tunnelopgaver, kun 4. Endvidere kan det være på grund af store forskelle i vores testdeltageres løsninger af opgaverne. Hvis vi tilpasser Accot og Zhai's formulering til vores kontrollerede testpersoners individuelle data, så kan det visualiseres, hvor stor afvigelse der er testdeltagerne imellem. Figur \ref{fig:navigationtest1} viser den traditionelle stigning i tiden med tilsvarende stigning i $ID$, men på figur \ref{fig:navigationtest2} kan det ses, hvordan datapunkterne opfører sig stik modsat. Det vil sige, at testperson 9 var hurtigere til at klare opgaverne i takt med, at de blev sværere.\\\\
+Selvom Accot og Zhai's formulering er specificeret til denne type opgaver, er det ikke den, som beskriver vores data bedst. Dette kan være på grund af, at vi kun har fire tunnelopgaver. Endvidere kan det være på grund af store forskelle i vores testdeltageres løsninger af opgaverne. Hvis vi tilpasser Accot og Zhai's formulering til vores kontrollerede testpersoners individuelle data, så kan det visualiseres, hvor stor afvigelse der er testdeltagerne imellem. Figur \ref{fig:navigationtest1} viser den traditionelle stigning i tiden med tilsvarende stigning i $ID$, men på figur \ref{fig:navigationtest2} kan det ses, hvordan datapunkterne opfører sig stik modsat. Det vil sige, at testperson 9 var hurtigere til at klare opgaverne i takt med, at de blev sværere.\\\\
 \begin{minipage}{\linewidth}
 	\begin{minipage}[b]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_test_navigation_1}
