--- a/latex/main.tex
+++ b/latex/main.tex
@@ -799,7 +799,7 @@ Selvom Accot og Zhai's formulering er specificeret til denne type opgaver, er de
 \begin{minipage}{\linewidth}
 	\begin{minipage}[b]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_test_navigation_1}
-		\captionof{figure}{Accot og Zhai's formulering tilpasset til testperson 7's 4 tunnelopgaver, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{Accot og Zhai's formulering tilpasset til testperson 7's fire tunnelopgaver, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:navigationtest1}
 	\end{minipage}
 	\begin{minipage}[b]{0.1\linewidth}
@@ -807,7 +807,7 @@ Selvom Accot og Zhai's formulering er specificeret til denne type opgaver, er de
 	\end{minipage}
 	\begin{minipage}[b]{0.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_test_navigation_2}
-		\captionof{figure}{Accot og Zhai's formulering tilpasset til testperson 9's 4 tunnelopgaver, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{Accot og Zhai's formulering tilpasset til testperson 9's fire tunnelopgaver, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:navigationtest2}
 	\end{minipage}
 \end{minipage}
