--- a/latex/main.tex
+++ b/latex/main.tex
@@ -902,7 +902,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 			Fitts & 20262.07 & 36.4\\
 			Welford & 20613.96 & 388.29
 		\end{tabular}
-		\captionof{table}{AIC værdier for de 264 testdeltageres spiralopgaver. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt.}
+		\captionof{table}{AIC værdier for de 264 testdeltageres spiralopgaver. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt}
 		\label{tab:table_analysis_aic_spiral_all}
 	\end{minipage}
 	\begin{minipage}[t]{0.1\linewidth}
@@ -917,7 +917,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 			Fitts & 71.25 & 9.34\\
 			Welford & 79.11 & 17.2
 		\end{tabular}
-		\captionof{table}{AIC værdier for gennemsnittet af tiderne for de 264 testdeltageres spiralopgaver ved hvert $ID$. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt.}
+		\captionof{table}{AIC værdier for gennemsnittet af tiderne for de 264 testdeltageres spiralopgaver ved hvert $ID$. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt}
 		\label{tab:table_analysis_aic_spiral_mean}
 	\end{minipage}
 \end{minipage}
@@ -925,7 +925,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 \begin{minipage}{\linewidth}
 	\begin{minipage}[t]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_welford}
-		\captionof{figure}{Welford's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen.}
+		\captionof{figure}{Welford's lineære model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:welford_spiral_line}
 	\end{minipage}
 	\begin{minipage}[b]{0.1\linewidth}
@@ -933,14 +933,14 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 	\end{minipage}
 	\begin{minipage}[t]{0.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_fitt}
-		\captionof{figure}{Fitts' affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen.}
+		\captionof{figure}{Fitts' affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:fitt_spiral_line}
 	\end{minipage}
 \end{minipage}
 \begin{minipage}{\linewidth}
 	\begin{minipage}[t]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_meyer}
-		\captionof{figure}{Meyer's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen.}
+		\captionof{figure}{Meyer's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:meyer_spiral_line}
 	\end{minipage}
 	\begin{minipage}[b]{0.1\linewidth}
@@ -948,7 +948,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 	\end{minipage}
 	\begin{minipage}[t]{0.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_mackenzie}
-		\captionof{figure}{Mackenzie's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen.}
+		\captionof{figure}{Mackenzie's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:mackenzie_spiral_line}
 	\end{minipage}
 \end{minipage}
@@ -956,7 +956,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 	\begin{minipage}[t]{\linewidth}
 		\centering
 		\includegraphics[width=0.5\textwidth]{images/plots/plot_model_spiral_accot}
-		\captionof{figure}{Accot \& Zhai's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen.}
+		\captionof{figure}{Accot \& Zhai's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:accot_spiral_line}
 	\end{minipage}
 \end{minipage}
