--- a/latex/main.tex
+++ b/latex/main.tex
@@ -902,7 +902,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 			Fitts & 20262.07 & 36.4\\
 			Welford & 20613.96 & 388.29
 		\end{tabular}
-		\captionof{table}{AIC værdier for de 264 testdeltageres spiralopgaver. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt}
+		\captionof{table}{AIC-værdier for de 264 testdeltageres spiralopgaver. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt}
 		\label{tab:table_analysis_aic_spiral_all}
 	\end{minipage}
 	\begin{minipage}[t]{0.1\linewidth}
@@ -917,7 +917,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 			Fitts & 71.25 & 9.34\\
 			Welford & 79.11 & 17.2
 		\end{tabular}
-		\captionof{table}{AIC værdier for gennemsnittet af tiderne for de 264 testdeltageres spiralopgaver ved hvert $ID$. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt}
+		\captionof{table}{AIC-værdier for gennemsnittet af tiderne for de 264 testdeltageres spiralopgaver ved hvert $ID$. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt}
 		\label{tab:table_analysis_aic_spiral_mean}
 	\end{minipage}
 \end{minipage}
