--- a/latex/main.tex
+++ b/latex/main.tex
@@ -862,7 +862,7 @@ For at kunne tilpasse vores fire originale formuleringer af Fitts' lov, har vi d
 \text{Meyer's: } &T = -16269.1 + 8452.2 \cdot \sqrt{\frac{A}{W}}
 \end{align*}
 
-Accot og Zhai argumenterer i \cite{accot1997} for, at $ID$ for en navigationsopgave med en spiral, kan findes ved at opdele den i delelementer baseret på vinklen $\theta$. Ved hvert delelement kan bredden, $w$, findes og alle delelementerne summeres ved et integral over vinklerne på baggrund af antal vindinger, $n$. Dette integral, vist nedenfor, giver i følge Accot og Zhai et $ID_s$, som er specifikt for denne type navigationsopgaver. 
+Accot og Zhai argumenterer i \cite{accot1997} for, at $ID$ for en navigationsopgave med en spiral, kan findes ved at opdele den i delelementer baseret på vinklen $\theta$. Ved hvert delelement kan bredden, $w$, findes og alle delelementerne summeres ved et integral over vinklerne på baggrund af antallet vindinger, $n$. Dette integral, vist nedenfor, giver i følge Accot og Zhai et $ID_s$, som er specifikt for denne type navigationsopgaver. 
 \begin{align*}
 ID_s = \int_{2\pi}^{2\pi(n+1)}\frac{\sqrt{\left(\theta+w\right)^6+9\left(\theta+w\right)4}}{\left(\theta+2\pi+2\right)^3-\left(\theta+w\right)^3}d\theta
 \end{align*}
